--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Shukin Karate</title>
 		<link href='https://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+		<link rel="icon" href="favicon.ico" type="image/x-icon" />
 		<style>
 		body { font-family: Oswald; sans-serif }
 		h2, h3, h4, h5, h6 { color: rgb(25, 51, 51); }
@@ -18,26 +19,7 @@
 	<body>
 		<div class="bit">
 			<h1>Shukin Karate</h1>
-			<p>Traditional Karate</p>
-			<p>Self-defence, technique, the art, and competition</p>
-		</div>
-		<div class="bit">
-			<h2>Training hall</h2>
-			<a href="https://goo.gl/maps/CUbB59AYEiz"><img src="map.png" alt="Google Map"/></a>
-			<br/>
-			<address>Nonsuch Theatre<br/>Clarendon Chambers<br/>32A Clarendon Street<br/>Nottingham<br/>NG1 5JD</address>
-		</div>
-		<div class="bit">
-			<h2>Instructor</h2>
-			<p>Rik Hemsley</p>
-			<p>&#9993; <a href="mailto:rik@hemsley.cc">rik@hemsley.cc</a></p>
-			<p>&#128222;<a href="tel:+447709490004">0770 949 0004</a></p>
-		</div>
-		<div class="bit">
-			<h2>More</h2>
-			<p>Free</p>
-			<p>Two lunchtimes per week</p>
-			<p>&#128197; <a href="https://goo.gl/rvsr0m">Training calendar</a></p>
+			<p>Back in a few years</p>
 		</div>
 	</body>
 </html>
